tests/baselines/reference/propertyAccess5.errors.txt
propertyAccess5.ts(1,1): error TS18050: The value 'undefined' cannot be used here.


==== propertyAccess5.ts (1 errors) ====
    undefined.toBAZ();
    ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.